# verdit-mcp-suite

./: README.md
.github/workflows/: create_r2_bucket.yml  sdk-publish.yml  sidecar-publish.yml
python-middleware/: README.md  pyproject.toml  verditnxtgen_mcp.py
sidecar-proxy/: Dockerfile  docker-compose.example.yml  proxy.py
ts-middleware/: README.md  index.ts  package.json  tsconfig.json
