[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verditnxtgen-mcp"
version = "1.0.0"
description = "One-decorator MCP middleware for the VerditNxtGen cryptographic ledger"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "ai-security", "verditnxtgen", "llm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://verditnxtgen.com"
Repository = "https://github.com/ShopFarnow/VerditNxtGen"
Documentation = "https://verditnxtgen.com/score-methodology.html"

[tool.setuptools]
py-modules = ["verditnxtgen_mcp"]
